sm/sm-b2b-connector/main/default/objects/B2B_Shipping_Address__c/B2B_Shipping_Address__c.object-meta.xml
<CustomObject>
    <label>B2B Shipping Address</label>
    <nameField>
        <label>B2B Shipping Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Shipping Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>