sm/sm-b2b-connector/main/default/objects/B2B_Shipping_Address__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>B2B Shipping Addresses</relationshipLabel>
    <relationshipName>B2B_Shipping_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>