sm/sm-b2b-connector/main/default/objects/B2B_Shipping_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>