sm/sm-b2b-connector/main/default/objects/B2B_Shipping_Address__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>