sm/sm-b2b-connector/main/default/objects/B2B_Shipping_Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>